[gd_scene load_steps=12 format=2]

[ext_resource path="res://GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://Player/HealthBar/label_HP_bg.png" type="Texture" id=2]
[ext_resource path="res://Player/HealthBar/label_HP.png" type="Texture" id=3]
[ext_resource path="res://StartScreen/assets/fonts/design.graffiti.comicsansms.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Player/HealthBar/  LifeBarUnder.png" type="Texture" id=5]
[ext_resource path="res://Player/HealthBar/  LifeBarProgress_1.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_bottom = 2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 4 )

[node name="GUI" type="MarginContainer"]
anchor_right = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 64.0

[node name="Bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 917.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="Bar" type="HBoxContainer" parent="HBoxContainer/Bars"]
margin_right = 917.0
margin_bottom = 44.0

[node name="Count" type="MarginContainer" parent="HBoxContainer/Bars/Bar"]
margin_right = 100.0
margin_bottom = 44.0
rect_min_size = Vector2( 100, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Bars/Bar/Count"]
margin_right = 100.0
margin_bottom = 44.0
texture = ExtResource( 2 )

[node name="Title" type="TextureRect" parent="HBoxContainer/Bars/Bar/Count/Background"]
margin_right = 50.0
margin_bottom = 40.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="Number" type="Label" parent="HBoxContainer/Bars/Bar/Count/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -3.0
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2

[node name="HealthBar" type="TextureProgress" parent="HBoxContainer/Bars/Bar"]
margin_left = 104.0
margin_right = 454.0
margin_bottom = 44.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="PauseButton" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 921.0
margin_right = 984.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="HBoxContainer/PauseButton"]
margin_right = 63.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Pause"

[node name="PausePopup" type="Popup" parent="."]
pause_mode = 2
margin_left = 350.0
margin_top = 150.0
margin_right = 984.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PausePopup"]
margin_right = 40.0
margin_bottom = 40.0

[node name="PauseLabel" type="Label" parent="PausePopup/VBoxContainer"]
margin_right = 103.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "Game is Paused
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PausePopup/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
alignment = 1

[node name="ContinueButton" type="Button" parent="PausePopup/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Continue"

[node name="ReturnButton" type="Button" parent="PausePopup/VBoxContainer/HBoxContainer"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"
[connection signal="pressed" from="HBoxContainer/PauseButton/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="PausePopup/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
